fixed scrollbar height

--- a/src/styles/brackets_theme_tomorrow_night_eighties.less
+++ b/src/styles/brackets_theme_tomorrow_night_eighties.less
@@ -154,6 +154,7 @@
 /* Custom Scrollbars */
 ::-webkit-scrollbar {
     width: 12px;
+    height: 12px;
 }
  
 ::-webkit-scrollbar-track {
